# StudentBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  HackModeusBot.py  README.md  StudentAccount.py  __main__.py  bot_config_example.py  config_example.py  docker-compose.yaml  exceptions.py  keyboards.py  pagination_kb.py  parser_config_example.py  pyproject.toml  requirements.txt  student_account.py  student_bot.py
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: cipher.py  database.py  exception_handlers.py  exceptions.py  logger.py  main.py  models.py
backend/app/parsers/: exceptions.py  rating_parser.py  schedule_parser.py  student_account.py
bot/: pyproject.toml
bot/src/: __main__.py
bot/src/handlers/: auth_handlers.py  menu_handlers.py  rating_handlers.py  schedule_handlers.py
bot/src/lexicon/: __init__.py  lexicon.py
bot/src/rating_parser/: rating_parser.py
bot/src/schedule_parser/: __init__.py  schedule_parser.py
bot/src/student_account/: exceptions.py  student_account.py
frontend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
frontend/bot/: __main__.py
frontend/bot/database/: __init__.py  database.py
frontend/bot/exceptions/: api_exceptions.py
frontend/bot/filters/: filters.py
frontend/bot/handlers/: auth_handlers.py  menu_handlers.py  rating_handlers.py  schedule_handlers.py
frontend/bot/keyboards/: menu_kb.py  pagination_kb.py
frontend/bot/lexicon/: __init__.py  lexicon.py
frontend/bot/utils/: __init__.py  utils.py
(+29 files in other folders)
