[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common @ file:///app/common",
    "aiogram>=3.22.0",
    "async-property>=0.2.2",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "selenium>=4.35.0",
]
